# Ruffsack

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yaml
contracts/: Caravan.vy  CaravanFactory.vy  CaravanProxy.sol  ICaravan.vyi  Ruffsack.vy  RuffsackFactory.vy  RuffsackProxy.sol  RuffsackProxy.vy
contracts/guards/: IAdminGuard.vyi  IExecuteGuard.vyi
ruffsack/: __init__.py  __main__.py  cli.py  factory.py  main.py  modules.py  packages.py  queue.py  settings.py
ruffsack/manifests/: README.md  v0.1.json
ruffsack/messages/: __init__.py  admin.py  execute.py
scripts/: deploy.py  q0000000.py  release.py
sdk/py/caravan/: __init__.py  __main__.py  cli.py  factory.py  main.py  modules.py  packages.py  queue.py  settings.py
sdk/py/caravan/manifests/: README.md  v1.json
sdk/py/caravan/messages/: admin.py  execute.py
tests/: conftest.py  test_admin.py  test_execute.py  test_operation.py
tests/functional/: test_execute.py
tests/integration/: conftest.py  test_sudo.py
