[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ruffsack"
version = "0.1.0"
description = "Ruffsack: A rugged multisig wallet for everyday adventures"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eth-ape>=0.8.41",
    "eip712>=0.2.14", # NOTE: Pin because an important fix is needed
    "createx>=0.1.1",
]

[dependency-groups]
test = [
    "ape-foundry>=0.8.10",
    "ape-solidity>=0.8.5",
    "ape-vyper>=0.8.9",
]
dev = [
    {include-group = "test"},
]

[[project.authors]]
name = "ApeWorX LTD"

[project.scripts]
ruffsack = "ruffsack.__main__:cli"

[tool.setuptools]
packages = ["ruffsack"]
[tool.setuptools.package-data]
ruffsack = ["manifests/*.json"]

[tool.setuptools_scm]
# NOTE: Required for `setuptools-scm` to function

[[tool.ape.plugins]]
name = "foundry"
[[tool.ape.plugins]]
name = "solidity"
[[tool.ape.plugins]]
name = "vyper"

# Factory
#[[tool.ape.deployments.ethereum.deterministic]]
[[tool.ape.deployments.ethereum.local]]
address = "0x4862bF0d25F19E72e40E0Fd7E90ce4836bEd4A2c"
contract_type = "RuffsackFactory"

# Singleton
# NOTE: Update latest Singleton when contract code changes
# v1 (Latest)
#[[tool.ape.deployments.ethereum.deterministic]]
[[tool.ape.deployments.ethereum.local]]
address = "0xb5c126f2c2023c6af7FD71941fF24feCfAEdC085"
contract_type = "Ruffsack"
