[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "caravan-py"
version = "0.2.2"
description = "Caravan: A shared wallet for everyday adventures"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eth-ape>=0.8.43",
    "eip712>=0.3.3",  # NOTE: Special pin needed
    "createx>=0.1.1",
]

[dependency-groups]
test = [
    "ape-foundry>=0.8.10",
    "ape-solidity>=0.8.5",
    "ape-vyper>=0.8.9",
]
dev = [
    {include-group = "test"},
]

[[project.authors]]
name = "ApeWorX LTD"

[project.scripts]
caravan = "caravan.__main__:cli"

[tool.setuptools.packages.find]
where = [ "sdk/py" ]
include = ["caravan"]

[tool.setuptools.package-data]
caravan = ["manifests/*.json"]

[tool.setuptools_scm]
# NOTE: Required for `setuptools-scm` to function

[[tool.ape.plugins]]
name = "foundry"
[[tool.ape.plugins]]
name = "solidity"
[[tool.ape.plugins]]
name = "vyper"

# Factory
#[[tool.ape.deployments.ethereum.deterministic]]
[[tool.ape.deployments.ethereum.local]]
address = "0x04579FFC45fE10A7901B88EaEc8F4850b847D37c"
contract_type = "CaravanFactory"

# Singleton
# NOTE: Update latest Singleton when contract code changes
# v1 (Latest)
#[[tool.ape.deployments.ethereum.deterministic]]
[[tool.ape.deployments.ethereum.local]]
address = "0xf7AC37e8A31Da4D2Fbe7687118c142dd46e63517"
contract_type = "Caravan"
